assets/admission-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: Expose the admission webhook service which validates `PrometheusRules` and `AlertmanagerConfig` custom resources on port 8443.
    service.beta.openshift.io/serving-cert-secret-name: prometheus-operator-admission-webhook-tls
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: prometheus-operator-admission-webhook
    app.kubernetes.io/part-of: openshift-monitoring
    app.kubernetes.io/version: 0.94.0
  name: prometheus-operator-admission-webhook
  namespace: openshift-monitoring
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/name: prometheus-operator-admission-webhook
    app.kubernetes.io/part-of: openshift-monitoring
