assets/admission-webhook/alertmanager-config-validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    capability.openshift.io/name: OptionalMonitoring
    openshift.io/description: Validating webhook for `AlertmanagerConfig` custom resources. Note that this webhook is a part of optional monitoring, and will only be deployed if the `OptionalMonitoring` capability is enabled.
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: alertmanagerconfigs.openshift.io
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: prometheus-operator-admission-webhook
      namespace: openshift-monitoring
      path: /admission-alertmanagerconfigs/validate
      port: 8443
  failurePolicy: Ignore
  name: alertmanagerconfigs.openshift.io
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - alertmanagerconfigs
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
